--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -44,6 +44,15 @@
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer2mins" id="zjY-Ib-Huw"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5BM-9m-Qkq">
+                                <rect key="frame" x="168" y="107" width="38" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="3 mins"/>
+                                <connections>
+                                    <action selector="minutes3tapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mdk-Dl-V6l"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer3mins" id="2KL-MI-eiI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95686274509803915" green="0.94117647058823528" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -87,8 +96,9 @@
     <resources>
         <image name="1 min" width="60" height="60"/>
         <image name="2 min" width="68" height="68"/>
+        <image name="3 mins" width="76" height="76"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zjY-Ib-Huw"/>
+        <segue reference="2KL-MI-eiI"/>
     </inferredMetricsTieBreakers>
 </document>
