--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -53,6 +53,15 @@
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer3mins" id="2KL-MI-eiI"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0md-Mo-car">
+                                <rect key="frame" x="166" y="153" width="42" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="4 mins"/>
+                                <connections>
+                                    <action selector="minutes4tapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mtC-87-YlO"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer4mins" id="EEl-hK-wyN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95686274509803915" green="0.94117647058823528" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -97,6 +106,7 @@
         <image name="1 min" width="60" height="60"/>
         <image name="2 min" width="68" height="68"/>
         <image name="3 mins" width="76" height="76"/>
+        <image name="4 mins" width="84" height="84"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="2KL-MI-eiI"/>
