--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -66,6 +66,22 @@
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer5mins" id="8LE-Hd-oIZ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1b-la-mdB">
+                                <rect key="frame" x="162" y="257" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="6 mins"/>
+                                <connections>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer6mins" id="2hh-4q-DcW"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DrQ-BM-lqa">
+                                <rect key="frame" x="160" y="315" width="54" height="54"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="7 mins"/>
+                                <connections>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer7mins" id="KKs-sx-7lg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95686274509803915" green="0.94117647058823528" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -112,8 +128,10 @@
         <image name="3 mins" width="76" height="76"/>
         <image name="4 mins" width="84" height="84"/>
         <image name="5 mins" width="92" height="92"/>
+        <image name="6 mins" width="100" height="100"/>
+        <image name="7 mins" width="108" height="108"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="8LE-Hd-oIZ"/>
+        <segue reference="KKs-sx-7lg"/>
     </inferredMetricsTieBreakers>
 </document>
