--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -101,6 +101,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6qB-QO-VyR">
+                                <rect key="frame" x="335" y="20" width="24" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="close button"/>
+                                <connections>
+                                    <action selector="stopTimer:" destination="2cq-mP-vgg" eventType="touchUpInside" id="ZI0-th-504"/>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="stopTimer" id="Ybt-gd-h9y"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95686274509803915" green="0.94117647058823528" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="jPt-aT-zXD"/>
@@ -122,8 +131,9 @@
         <image name="5 mins" width="92" height="92"/>
         <image name="6 mins" width="100" height="100"/>
         <image name="7 mins" width="108" height="108"/>
+        <image name="close button" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="KKs-sx-7lg"/>
+        <segue reference="8LE-Hd-oIZ"/>
     </inferredMetricsTieBreakers>
 </document>
