--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -76,6 +76,21 @@
                                     <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer7mins" id="KKs-sx-7lg"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nW4-17-hLk">
+                                <rect key="frame" x="158" y="377" width="58" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="8 mins"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6C3-ox-plm">
+                                <rect key="frame" x="156" y="443" width="62" height="62"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="9 mins"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hne-UD-gIT">
+                                <rect key="frame" x="154" y="513" width="66" height="66"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="10 mins"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95686274509803915" green="0.94117647058823528" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -151,12 +166,15 @@
     </scenes>
     <resources>
         <image name="1 min" width="60" height="60"/>
+        <image name="10 mins" width="132" height="132"/>
         <image name="2 min" width="68" height="68"/>
         <image name="3 mins" width="76" height="76"/>
         <image name="4 mins" width="84" height="84"/>
         <image name="5 mins" width="92" height="92"/>
         <image name="6 mins" width="100" height="100"/>
         <image name="7 mins" width="108" height="108"/>
+        <image name="8 mins" width="116" height="116"/>
+        <image name="9 mins" width="124" height="124"/>
         <image name="close button" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
