--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="1 min"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer1min" id="C7Q-Ah-y24"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer1min" modalTransitionStyle="crossDissolve" id="C7Q-Ah-y24"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kuG-oS-KLW">
@@ -33,7 +33,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="2 min"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer2mins" id="zjY-Ib-Huw"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer2mins" modalTransitionStyle="crossDissolve" id="zjY-Ib-Huw"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5BM-9m-Qkq">
@@ -41,7 +41,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="3 mins"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer3mins" id="2KL-MI-eiI"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer3mins" modalTransitionStyle="crossDissolve" id="2KL-MI-eiI"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0md-Mo-car">
@@ -49,7 +49,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="4 mins"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer4mins" id="EEl-hK-wyN"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer4mins" modalTransitionStyle="crossDissolve" id="EEl-hK-wyN"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0q-il-f0e">
@@ -57,7 +57,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="5 mins"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer5mins" id="8LE-Hd-oIZ"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer5mins" modalTransitionStyle="crossDissolve" id="8LE-Hd-oIZ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1b-la-mdB">
@@ -65,7 +65,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="6 mins"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer6mins" id="2hh-4q-DcW"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer6mins" modalTransitionStyle="crossDissolve" id="2hh-4q-DcW"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DrQ-BM-lqa">
@@ -73,7 +73,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="7 mins"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer7mins" id="KKs-sx-7lg"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer7mins" modalTransitionStyle="crossDissolve" id="KKs-sx-7lg"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nW4-17-hLk">
@@ -81,7 +81,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="8 mins"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer8mins" id="r2O-qd-xdN"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer8mins" modalTransitionStyle="crossDissolve" id="r2O-qd-xdN"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6C3-ox-plm">
@@ -89,7 +89,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="9 mins"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer9mins" id="Tym-14-BR6"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer9mins" modalTransitionStyle="crossDissolve" id="Tym-14-BR6"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hne-UD-gIT">
@@ -97,7 +97,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="10 mins"/>
                                 <connections>
-                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer10mins" id="CE1-0p-ER1"/>
+                                    <segue destination="2cq-mP-vgg" kind="presentation" identifier="timer10mins" modalTransitionStyle="crossDissolve" id="CE1-0p-ER1"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -130,7 +130,7 @@
                                 <state key="normal" image="close button"/>
                                 <connections>
                                     <action selector="stopTimer:" destination="2cq-mP-vgg" eventType="touchUpInside" id="ZI0-th-504"/>
-                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="stopTimer" id="Ybt-gd-h9y"/>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="stopTimer" modalTransitionStyle="crossDissolve" id="Ybt-gd-h9y"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCo-tO-gFY">
