--- a/timer/Base.lproj/Main.storyboard
+++ b/timer/Base.lproj/Main.storyboard
@@ -117,15 +117,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6qB-QO-VyR">
-                                <rect key="frame" x="335" y="20" width="24" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="close button"/>
-                                <connections>
-                                    <action selector="stopTimer:" destination="2cq-mP-vgg" eventType="touchUpInside" id="ZI0-th-504"/>
-                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="stopTimer" modalTransitionStyle="crossDissolve" id="Ybt-gd-h9y"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCo-tO-gFY">
                                 <rect key="frame" x="18.5" y="165.5" width="337.5" height="337.5"/>
                                 <subviews>
@@ -140,6 +131,15 @@
                                     <constraint firstItem="fnP-Mq-3Hj" firstAttribute="centerY" secondItem="JCo-tO-gFY" secondAttribute="centerY" id="sCj-pC-0hL"/>
                                 </constraints>
                             </view>
+                            <button autoresizesSubviews="NO" opaque="NO" contentMode="center" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6qB-QO-VyR">
+                                <rect key="frame" x="329" y="33" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="close button"/>
+                                <connections>
+                                    <action selector="stopTimer:" destination="2cq-mP-vgg" eventType="touchUpInside" id="ZI0-th-504"/>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="stopTimer" modalTransitionStyle="crossDissolve" id="Ybt-gd-h9y"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95686274509803915" green="0.94117647058823528" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
